#--------------------------------------------------------------------------
# ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-79
2020-06-03 Mikhail S. Dubrovin
- add -R option and diagnostics (plot) to app/epix10ka_offset_calibration
- add ../examples/ex_epix10ka*
- add common-mode correction to epix10ka, det.calib(evt, cmpars=(7,2,100))
- pass raw data as external parameter, det.calib(evt, nda_raw=raw)
	modified:   ../app/epix10ka_offset_calibration
	new file:   ../examples/ex_epix10ka2m_test_calibcycles.py
	new file:   ../examples/ex_epix10ka_cmod.py
	modified:   AreaDetector.py
	modified:   UtilsEpix10ka.py

Tag: V01-00-78
2020-02-25 Mikhail S. Dubrovin
- app/jungfrau_gain_constants contract intermediate file name (Philip)

Tag: V01-00-77
2020-01-29 Mikhail S. Dubrovin
- In UtilsJungfrau.calib_jungfrau add optional parameter nda_raw=None to bypass det.raw (for Silke)

Tag: V01-00-76
2020-01-21 Mikhail S. Dubrovin
- update examples/ex_jungfrau_images.py for pixel numeration demo

Tag: V01-00-75
2020-01-15 Mikhail S. Dubrovin
- update Detector/examples for Jungfrau4M

Tag: V01-00-74
2019-04-16 Mikhail S. Dubrovin
- integrate AreaDetectorCompound under Detector
- use (str) or (list) input parameter 'compound det1 det2', ['det1', 'det2']
modified:   examples/ex_AreaDetectorCompound.py
modified:   src/AreaDetector.py
modified:   src/AreaDetectorCompound.py
modified:   src/PyDetector.py
modified:   src/UtilsJungfrau.py

Tag: V01-00-73
2019-04-08 Mikhail S. Dubrovin
add method examples/ex_AreaDetectorCompound.py

Tag: V01-00-72
2019-04-05 Mikhail S. Dubrovin
add methods
  - indexes_xy_at_z in AreaDetector and PyDetectorAccess
  - AreaDetectorCompaund.add_method_double_nda, image_at_z

Tag: V01-00-71
2019-04-05 Mikhail S. Dubrovin
- add AreaDetectorCompaund.py